<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:gravity="center"
    android:orientation="vertical">

    <!-- User ID -->
    <!-- User ID -->
    <!-- User ID -->
    <EditText
        android:id="@+id/editTextLoginUserId"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:drawableLeft="@drawable/icon_user"
        android:gravity="center"
        android:hint="Enter User ID"
        android:inputType="text"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text=""
        android:textColor="@color/edit_text_font"
        android:textColorHint="@color/edit_text_hint"
        android:textSize="@dimen/font_size_edit_text" />
    <!-- PIN -->
    <!-- PIN -->
    <!-- PIN -->
    <EditText
        android:id="@+id/editTextLoginPin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_edit_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="@dimen/margin_top"
        android:drawableStart="@drawable/icon_pin"
        android:gravity="center"
        android:hint="@string/hint_edit_text_enter_pin"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text=""
        android:textColor="@color/edit_text_font"
        android:textColorHint="@color/edit_text_hint"
        android:textSize="@dimen/font_size_edit_text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top">
        <!-- Auto Login -->
        <!-- Auto Login -->
        <!-- Auto Login -->
        <CheckBox
            android:id="@+id/checkBoxRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:text="@string/label_checkbox_auto_login"
            android:textColor="@color/edit_text_font"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top">
        <!-- Don't Have An Account -->
        <!-- Don't Have An Account -->
        <!-- Don't Have An Account -->
        <TextView
            android:id="@+id/txtViewDontHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/have_an_account"
            android:textColor="#000000"
            android:textSize="10sp" />
        <!--SignUp -->
        <!--SignUp -->
        <!--SignUp -->
        <TextView
            android:id="@+id/txtViewRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtViewDontHaveAnAccount"
            android:layout_marginStart="20dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/register"
            android:textColor="#000000"
            android:textSize="20sp" />
        <!-- Login -->
        <Button
            android:id="@+id/btnLoginLogin"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_border"
            android:text="Login"
            android:textAllCaps="false"
            android:textColor="@color/btn_label"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="#c0c0c0" />

    <TextView
        android:id="@+id/txtViewForgetPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forget_pin"
        android:textColor="#000000"
        android:textSize="16sp" />
    <!-- Server Response -->
    <!-- Server Response -->
    <!-- Server Response -->
    <TextView
        android:id="@+id/txtViewLoginShowServerResponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="@dimen/margin_top"
        android:text=""
        android:textColor="@color/text_view_font_error"
        android:textSize="16sp" />
    <!-- Info -->
    <!-- Info -->
    <!-- Info -->
    <ImageButton
        android:id="@+id/imageBtnInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/content_description_imgview_login_info"
        android:src="@drawable/icon_info" />
</LinearLayout>