<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context="com.bdmitech.android.huawei.qpay.QPayMenuNew">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Account Info/Quick Pay/QR Code -->
            <!-- Account Info/Quick Pay/QR Code -->
            <!-- Account Info/Quick Pay/QR Code -->
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardViewBasicInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="2.5">

                    <!-- Profile -->
                    <!-- Profile -->
                    <!-- Profile -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:gravity="center"
                        android:orientation="vertical">

                        <android.support.v7.widget.CardView
                            android:id="@+id/cardViewImage"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentLeft="true"
                            android:layout_margin="10dp"
                            android:shape="ring"
                            app:cardCornerRadius="40dp">

                            <ImageView
                                android:id="@+id/imgViewProfilePic"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/content_description_imgview_profile_pic"
                                android:src="@drawable/icon_profile" />
                        </android.support.v7.widget.CardView>


                    </LinearLayout>
                    <!-- Account Name & Account Number-->
                    <!-- Account Name & Account Number-->
                    <!-- Account Name & Account Number-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtViewAccountHolderName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="dfdfdf"
                            android:textColor="#000000"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/txtViewAccountNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="dfdf"
                            android:textColor="#000000"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/txtViewAccountTypeAndStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Customer|Active"
                            android:textColor="#000000"
                            android:textSize="12sp" />
                    </LinearLayout>
                    <!-- Quick Pay -->
                    <!-- Quick Pay -->
                    <!-- Quick Pay -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/imgBtnQuickPay"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentEnd="true"
                            android:background="@drawable/icon_quick_pay_01"
                            android:contentDescription="@string/content_description_imgbtn_scan_qr_for_wallet" />
                    </LinearLayout>
                    <!-- QR Scan -->
                    <!-- QR Scan -->
                    <!-- QR Scan -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/imgBtnQr"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentEnd="true"
                            android:background="@drawable/qr_code"
                            android:contentDescription="@string/content_description_imgbtn_scan_qr_for_wallet" />
                    </LinearLayout>
                </LinearLayout>


            </android.support.v7.widget.CardView>
            <!-- Balance -->
            <!-- Balance -->
            <!-- Balance -->
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardViewBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:weightSum="2">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:weightSum="3">
                        <!-- Voucher Pay-->
                        <!-- Voucher Pay-->
                        <!-- Voucher Pay-->
                        <Button
                            android:id="@+id/btnQPayMenuVoucherPay"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="#00000000"
                            android:drawableLeft="@drawable/icon_primary_wallet"
                            android:gravity="left|center_vertical"
                            android:paddingLeft="7dp"
                            android:text="   Voucher Pay"
                            android:textAllCaps="false"
                            android:textColor="#000000"
                            android:textSize="14sp" />

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="0.5dp"
                            android:background="#f1f1f1" />
                        <!-- Canteen Pay-->
                        <!-- Canteen Pay-->
                        <!-- Canteen Pay-->
                        <Button
                            android:id="@+id/btnQPayMenuCanteenPay"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="#00000000"
                            android:drawableLeft="@drawable/icon_salary_wallet"
                            android:gravity="left|center_vertical"
                            android:paddingLeft="7dp"
                            android:text="   Canteen Pay"
                            android:textAllCaps="false"
                            android:textColor="#000000"
                            android:textSize="14sp" />

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="0.5dp"
                            android:background="#f1f1f1" />
                        <!-- SIM Bill-->
                        <!-- SIM Bill-->
                        <!-- SIM Bill-->
                        <Button
                            android:id="@+id/btnQPaySimBill"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="#00000000"
                            android:drawableLeft="@drawable/icon_credit_wallet"
                            android:gravity="left|center_vertical"
                            android:paddingLeft="7dp"
                            android:text="   SIM Bill"
                            android:textAllCaps="false"
                            android:textColor="#000000"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Account Balance"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                        <android.support.v7.widget.CardView
                            android:id="@+id/cardViewPrimaryBalance2"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:shape="ring"
                            app:cardCornerRadius="60dp"
                            card_view:cardBackgroundColor="#C80000">

                            <LinearLayout
                                android:id="@+id/linearLayoutRefreshBalance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="BDT"
                                    android:textColor="#ffffff"
                                    android:textSize="12sp" />

                                <TextView
                                    android:id="@+id/txtViewBalance"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="12345"
                                    android:textColor="#ffffff"
                                    android:textSize="20sp" />
                            </LinearLayout>


                        </android.support.v7.widget.CardView>

                        <TextView
                            android:id="@+id/txtViewLabelBalance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="#C80000"
                            android:textSize="16sp"
                            android:visibility="gone" />
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>
            <!-- Last Transaction -->
            <!-- Last Transaction -->
            <!-- Last Transaction -->
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardViewNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:visibility="visible"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="10">

                    <LinearLayout
                        android:id="@+id/linearLayoutLastTransaction"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="8.5"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Last Transaction"
                            android:textColor="#000000"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewQPayMenuLastTransaction"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="#000000"
                            android:textSize="12sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1.5"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <ImageButton
                            android:id="@+id/imgBtnReload"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="#00ffffff"
                            android:contentDescription="@string/content_description_imgbtn_reload_last_transaction"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_btn_bg_reload" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!-- Grid View -->
            <!-- Grid View -->
            <!-- Grid View -->
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardViewOther"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                card_view:cardCornerRadius="4dp">


                <GridView
                    android:id="@+id/gridView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#f1f1f1"
                    android:horizontalSpacing="1dp"
                    android:numColumns="auto_fit"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="1dp" />


            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>